--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,7 +7,7 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 
-__Important note.__ Though this blog is still nascent as of the end of 2024, I expect its content to encompass a wide-ranging cross-section of my interests. Many of these interests are "academic" insofar as the academic stance is what I take toward most things in life (for better or for worse), but they extend well beyond the focus of my research at MIT. 
+Important note: Though this blog is still nascent as of the end of 2024, I expect its content to encompass a wide-ranging cross-section of my interests. Many of these interests are "academic" insofar as the academic stance is what I take toward most things in life (for better or for worse), but they extend well beyond the focus of my research at MIT. 
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
